config/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: orlandogtp/fastapi-chatbot:latest   # Asegúrate de usar la misma imagen que tu aplicación FastAPI
        command: ["celery"]
        args:
          - "-A"
          - "app.celery_app"
          - "worker"
          - "--loglevel=INFO"
          - "-P"
          - "solo"
          - "--without-gossip"
          - "--without-mingle"
          - "--without-heartbeat"
          - "--max-tasks-per-child=1000"
          - "--max-memory-per-child=512000"
        lifecycle:
          preStop:
            exec:
              command: [ "/bin/sh", "-c", "celery -A app.celery_app control shutdown && sleep 10" ]
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - celery -A app.celery_app inspect ping -d celery@$HOSTNAME
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - celery -A app.celery_app inspect ping -d celery@$HOSTNAME
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
