config/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-chatbot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-chatbot
  template:
    metadata:
      labels:
        app: fastapi-chatbot
    spec:
      containers:
      - name: fastapi-chatbot
        image: orlandogtp/fastapi-chatbot:v1.1.3
        command: ["uvicorn"]
        args: ["app.main:app", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
